<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_discovery"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:indeterminateOnly="true"
        android:visibility="gone"
        tools:visibility="visible"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_padding"
            android:divider="@drawable/vertical_items_divider"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/default_padding"
            android:showDividers="middle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="@dimen/default_padding_half"
                android:text="@string/who_is_pine"
                android:textSize="@dimen/large_text_size_scale_on"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_try_start_server"
                style="@style/DeviceInfoButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:gravity="center"
                android:paddingHorizontal="@dimen/default_padding_half"
                android:paddingVertical="@dimen/default_padding_half"
                android:text="@string/run_pine_server"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/txt_connected_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="@dimen/default_padding_half"
                android:text="@string/server_counter_connected_title"
                android:textSize="@dimen/default_text_size_scale_on"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_clients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_client"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>